Sat Nov 30 09:21:59 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c:
	- fix dynamic name generation for old Sybase server (like public
	  one) that require id length <= 10

Fri Nov 29 23:08:00 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/t0004.c: fix fail for security
	* include/tdsodbc.h: removed unused param fields
	* src/odbc/convert_sql2string.c src/odbc/convert_sql2string.h:
	* src/odbc/convert_tds2sql.c:
	- collect _odbc_get_server_type and reuse it

Fri Nov 29 20:51:54 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/unittests/rpc.c: remove some warnings

Fri Nov 29 20:44:55 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/unittests/rpc.c: enable RPC check for Sybase

Fri Nov 29 17:01:09 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/query.c:
	- add support for RPC using TDS5 (not tested)

Fri Nov 29 12:34:28 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/dblib/rpc.c src/tds/query.c:
	- added column_output for specify output parameters

Fri Nov 29 11:38:26 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: small optimization and remove TODO

Fri Nov 29 11:28:33 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: use column_type in parameters, not nullable

Thu Nov 28 21:18:31 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: add flag to tds_put_data_info*

Wed Nov 27 14:39:46 EST 2002	JK Lowden <jklowden@schemamania.org>
	* src/dblib/bcp.c	support bcp_options for hints
	* include/sybdb.h reordered bcp declarations
	- declared bcp structure for dbproc, added hint pointer

Wed Nov 27 00:20:51 EST 2002	JK Lowden <jklowden@schemamania.org>
	* src/apps/tsql.c use setlocale and nl_language to find client charset.
	
Mon Nov 25 23:09:52 EST 2002	JK Lowden <jklowden@schemamania.org>
	* src/dblib/rpc.c fixed stupid pointer problems in dbrpcinit and dbrpcparam