@@ -5,7 +5,8 @@ lib_LTLIBRARIES	=	libtdsodbc.la
 libtdsodbc_la_SOURCES=	odbc.c connectparams.c convert_tds2sql.c \
 	convert_sql2string.c prepare_query.c odbc_util.c \
 	convert_sql2string.h convert_tds2sql.h odbc_util.h \
-	prepare_query.h connectparams.h native.c
+	prepare_query.h connectparams.h native.c \
+	sql2tds.c sql2tds.h
 EXTRA_DIST = tables.sql
 if UNIXODBC
 libtdsodbc_la_LIBADD=	../tds/libtds_objects.la -lodbcinst $(NETWORK_LIBS) $(LIBICONV) ../replacements/libreplacements.la
